mongo parser